<resources>
    <string name="app_name">Playing Court Reservation</string>

    <!-- Search sport_centers/courts -->
    <string name="default_city">Torino</string>
    <string name="hour_format">kk:mm</string>
    <string name="date_format">MMM dd</string>
    <string name="date_extended_format">EEEE, MMMM dd, yyyy</string>
    <string name="search_box_info_text">Where do you want to play?</string>
    <string name="search_icon">search icon</string>
    <string name="search_sport_center_results_info">%1$d sport center%2$s found</string>
    <string name="select_city_icon">select city icon</string>
    <string name="search_box_hint">Search your city</string>
    <string name="select_hour">Search hour</string>
    <string name="select_hour_description">You can reserve a court no later than 30 minutes before the match</string>
    <string name="all_sports">All sports</string>
    <string name="available_services">Available services</string>
    <string name="no_services_available">No available services for this sport center</string>
    <string name="reserve_a_court">Reserve a court</string>
    <string name="hour_charge_court_short">€%1$s</string>
    <string name="sport_center_hours">%1$s - %2$s</string>
    <string name="court_available_to_reserve">Available to reserve</string>
    <string name="court_available_to_join">%1$s player%2$s needed</string>
    <string name="court_not_available">Unavailable</string>
    <string name="you_already_have_a_reservation">You already have a reservation in this date and time</string>
    <string name="no_sport_centers_found">There are no available sport centers with these search criteria</string>
    <string name="service_with_fee">%1$s €%2$s</string>
    <string name="go_to_reservation">Open reservation</string>
    <string name="court_name">Court name</string>
    <string name="court_type">Court type</string>
    <string name="court_price">Court price</string>
    <string name="court_availability">Court availability</string>
    <string name="service_name">Service name</string>
    <string name="service_price">Service price</string>
    <string name="sport_center_name">Sport center name</string>
    <string name="sport_center_address">Sport center address</string>
    <string name="sport_center_address_res">%1$s, %2$s</string>
    <string name="sport_center_opening_hours">00:00 – 15:00</string>
    <string name="reviews_summary">%1$s/5 (%2$s)</string>
    <string name="call_sport_center">call sport center</string>
    <string name="star_vector">star vector</string>
    <string name="selected_date_time">hh:mm, MMM dd</string>
    <string name="selected_date_time_res">%1$s, %2$s</string>
    <string name="search_courts_results_info">%1$d court%2$s available</string>
    <string name="too_late_for_time_slot">Unfortunately, it\'s too late to make a reservation for this time slot</string>
    <string name="available_services_count_info">%1$d service%2$s available</string>
    <string name="no_available_services_found">There are no available services for this sport center</string>
    <string name="total_amount">Total amount</string>
    <string name="just_total_reservation_price">€%1$s</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="confirm_reservation_message">Reservation at %1$s confirmed!</string>
    <!-- Reservations -->
    <string name="calendar_previous">Go Previous</string>
    <string name="calendar_next">Go Next</string>
    <string name="has_reservation">Has Reservation</string>
    <string name="no_reservations">No reservations for this day</string>
    <string name="reservation_info_concatenation">%1$s, %2$s</string>
    <string name="reservation_info_amount">€%1$s</string>
    <string name="no_services_chosen">No service chosen</string>
    <!-- Show Profile -->
    <string name="full_name_title">Full name</string>
    <string name="username_title">Username</string>
    <string name="age_title">Age</string>
    <string name="gender_title">Gender</string>
    <string name="location_title">Location</string>
    <string name="position_title">Position</string>
    <string name="dob_title">Date of birth</string>
    <string name="default_username">NoobSmasher</string>
    <string name="default_position">Midfielder</string>
    <fraction name="default_rating">0</fraction>
    <string name="default_full_name">Giacinto Milanesi</string>
    <integer name="default_age">21</integer>
    <string name="default_gender">Male</string>
    <string name="default_location">Torino</string>
    <string name="avatar_description">User profile avatar</string>
    <string name="rating_description">User skill level</string>
    <string name="warning_icon_description">Warning Icon</string>
    <string name="warning_icon_tooltip">Warning: player was late or missed one of the last 10 games</string>
    <string name="danger_icon_description">Danger Icon</string>
    <string name="danger_icon_tooltip">Unreliable player: arrived late or missed more than 5 games in the last 10</string>
    <string name="set_profile_image">set profile image</string>
    <string name="required_helper">Required</string>
    <string name="invalid_field_helper">Invalid field</string>
    <string name="edit_profile_ok_update_dialog_message">Profile successfully updated</string>
    <string name="edit_profile_no_ok_update_dialog_message">Unable to update the profile. Some field are wrong</string>
    <string name="camera">Camera</string>
    <string name="galley">Gallery</string>
    <string name="default_date">14–04–2002</string>
    <string name="username_min_length">Username min length is 5 characters</string>
    <string name="username_max_length">Username max length is 30 characters</string>
    <string name="home">Home</string>
    <string name="reservations">Reservations</string>
    <string name="profile">Profile</string>
    <!-- Reservations details-->
    <string name="reservation_details">Reservation Details</string>
    <string name="delete_reservation_button">Delete match</string>
    <string name="edit_reservation_button">Edit match</string>
    <string name="add_review_button">Add review</string>
    <string name="reservation_no_services_chosen">No services chosen</string>
    <string name="default_players_title">Players 0/?</string>
    <string name="search_player_button">Invite Player</string>
    <string name="default_request_title">Request to join</string>
    <string name="reject_button">Reject invite</string>
    <string name="accept_button">Accept invite</string>
    <string name="remove_button">Remove participation</string>
    <string name="request_join_button">Request to join</string>
    <string name="request_sent_button">Join request sent</string>
    <string name="participants_concatenate_title">Participants %1$s/%2$s</string>
    <string name="role_and_age_concatenation">%1$s, %2$s y.o.</string>
    <string name="match_already_full">Match is already full</string>
    <!-- Edit reservations details-->
    <string name="edit_reservation_details">Edit Reservation</string>
    <string name="edit_date_time">Edit Date/time</string>
    <string name="choose_services">Edit chosen services</string>
    <string name="chosen_services">Chosen services</string>
    <string name="reservation_success_update">The reservation has been update successfully</string>
    <string name="set_text_with_euro">€%1$s</string>
    <string name="set_opening_hours">%1$s-%2$s</string>
    <string name="reservation_details_concatenation">%1$s, €%2$s</string>

    <!-- Edit profile-->
    <string name="sport_default">Beach soccer</string>
    <string name="delete_button_rating">x</string>

    <string-array name="sport_array">
        <item>11-a-side-Football</item>
        <item>8-a-side-Football</item>
        <item>5-a-side-Football</item>
        <item>Beach Soccer</item>
        <item>Futsal</item>
    </string-array>

    <string-array name="position_array">
        <item>Attacker</item>
        <item>Midfielder</item>
        <item>Defender</item>
        <item>Goalkeeper</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!-- Dialogs-->
    <string name="dialog_generic_title">A problem occurred</string>
    <string name="dialog_try_again_title">Try again</string>

    <!-- Reviews-->
    <string name="tv_rating">Rating</string>
    <string name="tv_review">Write a text review</string>
    <string name="cancel_button">Cancel</string>
    <string name="submit_button">Submit</string>
    <string name="edit_text_review">Write a text review \n(min 10 characters)</string>

    <string name="review_rating_description">Rating of the court</string>
    <string name="review_list_text">Written review</string>

    <string name="no_review_found">There are no reviews available for this court</string>
    <string name="mean_rating_value">%1$s/5</string>
    <string name="mean_rating_text">Based on %1$s review%2$s</string>
    <string name="rating_error"> Rating required</string>

    <string name="my_review">Review</string>
    <string name="edit_review_button">Edit review</string>
    <string name="delete_review_button">Delete review</string>
    <string name="court_reviews">Court Reviews</string>

    <!-- Notification-->
    <string name="notifications">Notifications</string>
    <string name="no_notifications_found">There are no notifications</string>
    <string name="notification_timestamp">dd-MM-yyyy HH:mm:ss</string>
    <string name="notification_message">Notification message</string>
    <string name="delete_all_notifications">Delete all notifications</string>
    <string name="delete_notification">Delete notification</string>
    <string name="number_one">1</string>

    <!-- Invite users -->
    <string name="invite_users">Invite users</string>
    <string name="user_search_box_hint">Filter by username</string>
    <string name="filter_by_age">Filter by age (%1$s-%2$s)</string>
    <array name="initial_age_slider_values">
        <item>25</item>
        <item>70</item>
    </array>
    <string name="filter_by_skills">Filter by skills (%1$s-%2$s)</string>
    <array name="initial_skills_slider_values">
        <item>2</item>
        <item>4</item>
    </array>
    <string name="found_users_results_info">%1$d user%2$s found</string>
    <string name="user_position_age">%1$s, %2$s y.o.</string>
    <string name="not_specified_info">Non-specified information</string>
    <string name="no_users_found">There are no available users with these search criteria</string>

    <string name="user_invited">Invited</string>
    <string name="user_available">Available</string>


</resources>