<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/show_padding_inside_card">

    <LinearLayout
        android:id="@+id/name_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <it.polito.mad.g26.playingcourtreservation.ui.CustomTextView
            android:id="@+id/full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:value="@string/default_full_name"
            app:valueTextColor="@color/loading"
            app:valueBackgroundColor="@color/loading" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_information_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/show_default_margin_double"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_information">

        <it.polito.mad.g26.playingcourtreservation.ui.CustomTextView
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:value="@integer/default_age"
            app:valueTextColor="@color/loading"
            app:valueBackgroundColor="@color/loading" />

        <it.polito.mad.g26.playingcourtreservation.ui.CustomTextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:value="@string/default_gender"
            app:valueTextColor="@color/loading"
            app:valueBackgroundColor="@color/loading" />

        <it.polito.mad.g26.playingcourtreservation.ui.CustomTextView
            android:id="@+id/placeholder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:title=""
            app:value="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/show_default_margin_double"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_information_container">

        <it.polito.mad.g26.playingcourtreservation.ui.CustomTextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:value="@string/default_location"
            app:valueTextColor="@color/loading"
            app:valueBackgroundColor="@color/loading" />

        <it.polito.mad.g26.playingcourtreservation.ui.CustomTextView
            android:id="@+id/position"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:value="@string/default_position"
            app:valueTextColor="@color/loading"
            app:valueBackgroundColor="@color/loading" />

        <it.polito.mad.g26.playingcourtreservation.ui.CustomTextView
            android:id="@+id/placeholder2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:title=""
            app:value="" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>